# intbench

./: Cargo.toml  README.md
.github/workflows/: ubuntu.yml
src/: algo.rs  lib.rs  speedint.rs  types.rs
